--- a/.travis.yml
+++ b/.travis.yml
@@ -21,7 +21,7 @@ script:
 - docker build -t udagram-api-feed ./udagram-api-feed
 - docker build -t udagram-frontend ./udagram-frontend
 
-- docker tag udagram-reverseproxy jlildev/udagram-reverseproxy:latest
+- docker tag reverseproxy jlildev/udagram-reverseproxy:latest
 - docker tag udagram-api-user jlildev/udagram-api-user:latest
 - docker tag udagram-api-feed jlildev/udagram-api-feed:latest
 - docker tag udagram-frontend jlildev/udagram-frontend:latest
