--- a/.travis.yml
+++ b/.travis.yml
@@ -30,9 +30,9 @@ after_success:
 # Push
 # Assuming DOCKER_PASSWORD and DOCKER_USERNAME are set in the Travis repository settings
   - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
-  - docker push jlildev/udagram-reverseproxy:v1
-  - docker push jlildev/udagram-api-user:v1
-  - docker push jlildev/udagram-api-feed:v1
-  - docker push jlildev/udagram-frontend:v1
+  - docker push jlildev/udagram-reverseproxy:latest
+  - docker push jlildev/udagram-api-user:latest
+  - docker push jlildev/udagram-api-feed:latest
+  - docker push jlildev/udagram-frontend:local
 
 # Do similar for other three images
