Fix some configuration and add another screenshots

--- a/configuration/frontend-deployment.yaml
+++ b/configuration/frontend-deployment.yaml
@@ -17,7 +17,7 @@ spec:
     spec:
       containers:
       - name: frontend
-        image: jlildev/udagram-frontend:local
+        image: jlildev/udagram-frontend:latest
         imagePullPolicy: Always
         resources:
            requests:
