--- a/configuration/reverseproxy-deployment.yaml
+++ b/configuration/reverseproxy-deployment.yaml
@@ -15,7 +15,7 @@ spec:
         service: reverseproxy
     spec:
       containers:
-      - image: jlildev/reverseproxy:latest
+      - image: jlildev/udagram-reverseproxy:latest
         name: reverseproxy
         imagePullPolicy: Always  
         resources:
