--- a/configuration/user-deployment.yaml
+++ b/configuration/user-deployment.yaml
@@ -29,7 +29,7 @@ spec:
           - secretRef:
               name: env-secret
           - configMapRef:
-              name: env-config
+              name: env-configmap
           - secretRef:
               name: aws-secret
         ports:
