--- a/configuration/user-deployment.yaml
+++ b/configuration/user-deployment.yaml
@@ -15,7 +15,7 @@ spec:
         service: backend-user
     spec:
       containers:
-      - image: jlildev/udagram-api-user:latest
+      - image: jlildev/udagram-api-user:v2
         name: backend-user
         imagePullPolicy: Always  
         resources:
