--- a/.travis.yml
+++ b/.travis.yml
@@ -21,18 +21,18 @@ script:
 - docker build -t udagram-api-feed ./udagram-api-feed
 - docker build -t udagram-frontend ./udagram-frontend
 
-- docker tag reverseproxy jlildev/udagram-reverseproxy:latest
-- docker tag udagram-api-user jlildev/udagram-api-user:latest
-- docker tag udagram-api-feed jlildev/udagram-api-feed:latest
-- docker tag udagram-frontend jlildev/udagram-frontend:latest
+- docker tag reverseproxy jlildev/udagram-reverseproxy:v2
+- docker tag udagram-api-user jlildev/udagram-api-user:v2
+- docker tag udagram-api-feed jlildev/udagram-api-feed:v2
+- docker tag udagram-frontend jlildev/udagram-frontend:v2
 after_success:
 
 # Push
 # Assuming DOCKER_PASSWORD and DOCKER_USERNAME are set in the Travis repository settings
   - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
-  - docker push jlildev/udagram-reverseproxy:latest
-  - docker push jlildev/udagram-api-user:latest
-  - docker push jlildev/udagram-api-feed:latest
-  - docker push jlildev/udagram-frontend:latest
+  - docker push jlildev/udagram-reverseproxy:v2
+  - docker push jlildev/udagram-api-user:v2
+  - docker push jlildev/udagram-api-feed:v2
+  - docker push jlildev/udagram-frontend:v2
 
 # Do similar for other three images
