--- a/docker-compose-build.yaml
+++ b/docker-compose-build.yaml
@@ -3,16 +3,16 @@ services:
   reverseproxy:
     build:
       context: ./udagram-reverseproxy
-    image: reverseproxy:latest
+    image: reverseproxy:v2
   backend_user:
     build:
       context: ./udagram-api-user
-    image: udagram-api-user:latest
+    image: udagram-api-user:v2
   backend_feed:
     build:
       context: ./udagram-api-feed
-    image: udagram-api-feed:latest
+    image: udagram-api-feed:v2
   frontend:
     build:
       context: ./udagram-frontend
-    image: udagram-frontend:local
+    image: udagram-frontend:v2
